fixed issues on mobile and small screen

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -155,6 +155,7 @@ pre {
 .wrapper {
     max-width: -webkit-calc(660px - (#{$spacing-unit} * 2));
     max-width:         calc(660px - (#{$spacing-unit} * 2));
+    width: 100%;
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
@@ -164,6 +165,7 @@ pre {
     @include media-query($on-laptop) {
         max-width: -webkit-calc(660px - (#{$spacing-unit}));
         max-width:         calc(660px - (#{$spacing-unit}));
+        width: 100% !important;
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
