--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,161 +14,79 @@
     height: 100%;
     box-sizing: border-box;
     display: block;
-    padding: 30px;
+    padding: $spacing-unit;
 
     p { margin: 60px 0; }
-}
 
-.site-title {
-    font-size: 26px;
-    //line-height: 26px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
-    &,
-    &:visited {
-        color: $grey-color-dark;
+    .site-title {
+        font-size: 26px;
+        //line-height: 26px;
+        letter-spacing: -1px;
+        margin-bottom: 0;
+        float: left;
+        &,
+        &:visited {
+            color: $grey-color-dark;
+        }
+    }
+
+    .social-media-list { margin-left: 0; }
+    .social-media-list li { display: inline-block; margin-right: 20px; }
+
+    .site-nav {
+        margin-top: 60px;
+        line-height: 56px;
+
+        .menu-icon {
+            display: none;
+        }
+
+        .page-link {
+            color: $brand-color;
+            line-height: $base-line-height;
+            border-top: 2px solid $grey-color-light;
+            display: inline-block;
+            padding: 10px 0;
+            margin-right: 20px;
+        }
+    }
+
+    @include media-query($on-laptop) {
+        width: 100%;
+        padding: $spacing-unit / 2;
+        .left {
+            float: left;
+            clear: right;
+            width: 45%;
+            margin-right: 30px;
+            box-sizing: border-box;
+            min-width: 200px;
+        }
+        .social-media-list, .email { display: none; }
+        .site-nav {
+            margin-top: 0;
+            float: right;
+            //clear: left;
+            width: 45%;
+            box-sizing: border-box;
+            text-align: right;
+        }
+        p { margin: 30px 0; }
+    }
+
+    @include media-query($on-palm) {
+        padding-right: 0;
+        margin-right: 0;
+        .text { display: none; }
+        .site-nav {
+            margin-top: 15px;
+            text-align: left;
+        }
+        .left, .site-nav { width: 100%; padding-right: 0; margin-right: 0; }
     }
 }
 
-.header-image { margin-bottom: 60px; }
-
-.site-nav {
-    margin-top: 60px;
-    line-height: 56px;
-
-    .menu-icon {
-        display: none;
-    }
-
-    .page-link {
-        color: $brand-color;
-        line-height: $base-line-height;
-        border-top: 1px solid $grey-color-light;
-        display: block;
-        padding: 10px 0;
-
-        // Gaps between nav items, but not on the first one
-        // &:not(:first-child) {
-        //     margin-left: 20px;
-        // }
-    }
-
-    // @include media-query($on-palm) {
-    //     position: absolute;
-    //     top: 9px;
-    //     right: 30px;
-    //     background-color: $background-color;
-    //     border: 1px solid $grey-color-light;
-    //     border-radius: 5px;
-    //     text-align: right;
-
-    //     .menu-icon {
-    //         display: block;
-    //         float: right;
-    //         width: 36px;
-    //         height: 26px;
-    //         line-height: 0;
-    //         padding-top: 10px;
-    //         text-align: center;
-
-    //         > svg {
-    //             width: 18px;
-    //             height: 15px;
-
-    //             path {
-    //                 fill: $grey-color-dark;
-    //             }
-    //         }
-    //     }
-
-    //     .trigger {
-    //         clear: both;
-    //         display: none;
-    //     }
-
-    //     &:hover .trigger {
-    //         display: block;
-    //         padding-bottom: 5px;
-    //     }
-
-    //     .page-link {
-    //         display: block;
-    //         padding: 5px 10px;
-    //     }
-    // }
-}
-
-
-
-/**
- * Site footer
- */
-.site-footer {
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
-}
-
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
-
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-}
-
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
-    }
-
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
+.header-image { margin-bottom: 30px; }
 
 
 /**
